--- a/404.html
+++ b/404.html
@@ -1,25 +1,72 @@
 ---
-layout: default
 permalink: /404.html
 ---
+<head>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/4b9ba14b0f.js" crossorigin="anonymous"></script>
+  <style>
+    body {
+      background-color: #ccff00;
+    }
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
+    .mainbox {
+      background-color: #ccff00;
+      margin: auto;
+      height: 600px;
+      width: 600px;
+      position: relative;
+    }
 
-<div class="container">
-  <h1>404</h1>
+    .err {
+      color: #000000;
+      font-family: 'Nunito Sans', sans-serif;
+      font-size: 11rem;
+      position: absolute;
+      left: 20%;
+      top: 45%;
+    }
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+    .far {
+      position: absolute;
+      font-size: 8.5rem;
+      left: 42%;
+      top: 52%;
+      color: #000000;
+    }
+
+    .err2 {
+      color: #000000;
+      font-family: 'Nunito Sans', sans-serif;
+      font-size: 11rem;
+      position: absolute;
+      left: 68%;
+      top: 45%;
+    }
+
+    .msg {
+      text-align: center;
+      font-family: 'Nunito Sans', sans-serif;
+      font-size: 1.6rem;
+      position: absolute;
+      left: 16%;
+      top: 45%;
+      width: 75%;
+    }
+
+    a {
+      text-decoration: none;
+      color: #000000;
+    }
+
+    a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+
+<body>
+  <div class="mainbox">
+    <div class="err">4</div>
+    <i class="far fa-question-circle fa-spin"></i>
+    <div class="err2">4</div>
+  </div>
